# sync-devices

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  install.ps1  install.sh
.claude/commands/: sync-dev.md
.github/workflows/: ci.yml  release.yml
Formula/: sync-devices.rb
docs/analysis/: module-inventory.md  project-overview.md  risk-assessment.md
docs/plan/: dependency-graph.md  milestones.md  task-breakdown.md
docs/progress/: MASTER.md  phase-1-skeleton.md  phase-2-backend.md  phase-3-auth.md  phase-4-sync-engine.md  phase-5-tui.md  phase-6-release.md
src/: auth.rs  cloudflare_api.rs  main.rs  model.rs  sanitizer.rs  session_store.rs  transport.rs  tui.rs  worker_bundle.rs
src/adapter/: claude_code.rs  codex.rs  cursor.rs  mod.rs  shared_agents.rs
worker/: .dev.vars.example  DEPLOY.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/scripts/: verify-deploy-config.mjs
worker/src/: auth.ts  config-store.ts  github-oauth.ts  index.ts
